--- a/src/Grafica/Administrador_ventana.form
+++ b/src/Grafica/Administrador_ventana.form
@@ -1379,72 +1379,74 @@
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" alignment="0" attributes="0">
                                   <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="1" attributes="0">
-                                      <Component id="Curso_agregar_botonAgregar" min="-2" pref="151" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="0" attributes="0">
+                                      <Group type="103" alignment="0" groupAlignment="0" max="-2" attributes="0">
+                                          <Group type="102" attributes="0">
+                                              <Component id="Curso_agregar_grupo" min="-2" pref="98" max="-2" attributes="0"/>
+                                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                                              <Component id="Curso_agregar_opcionesGrupo" pref="174" max="32767" attributes="0"/>
+                                          </Group>
+                                          <Group type="102" alignment="0" attributes="0">
+                                              <Component id="Curso_agregar_clase" min="-2" pref="98" max="-2" attributes="0"/>
+                                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                                              <Component id="Curso_agregar_opcionesClase" min="-2" pref="171" max="-2" attributes="0"/>
+                                          </Group>
+                                          <Component id="Curso_agregar_docente" alignment="0" min="-2" pref="223" max="-2" attributes="0"/>
+                                      </Group>
+                                      <Component id="Curso_tablaDocentes" alignment="0" min="-2" pref="348" max="-2" attributes="0"/>
+                                      <Component id="Curso_agregar_docente1" min="-2" pref="223" max="-2" attributes="0"/>
                                       <Group type="102" attributes="0">
-                                          <Group type="103" groupAlignment="0" attributes="0">
-                                              <Group type="102" alignment="0" attributes="0">
-                                                  <Component id="Curso_agregar_clase" min="-2" pref="98" max="-2" attributes="0"/>
-                                                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                                                  <Component id="Curso_agregar_opcionesClase" min="-2" pref="171" max="-2" attributes="0"/>
-                                              </Group>
-                                              <Group type="102" alignment="0" attributes="0">
-                                                  <Component id="Curso_agregar_grupo" min="-2" pref="98" max="-2" attributes="0"/>
-                                                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                                                  <Component id="Curso_agregar_opcionesGrupo" min="-2" pref="171" max="-2" attributes="0"/>
-                                              </Group>
-                                              <Group type="102" attributes="0">
-                                                  <Component id="Curso_agregar_asignatura" min="-2" pref="98" max="-2" attributes="0"/>
-                                                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                                                  <Component id="Curso_agregar_opcionesAsignatura" min="-2" pref="171" max="-2" attributes="0"/>
-                                              </Group>
-                                              <Component id="Curso_agregar_docente" alignment="0" min="-2" pref="223" max="-2" attributes="0"/>
-                                          </Group>
-                                          <EmptySpace min="-2" pref="100" max="-2" attributes="0"/>
-                                          <Group type="103" groupAlignment="0" attributes="0">
-                                              <Component id="Curso_agregar_docente1" min="-2" pref="223" max="-2" attributes="0"/>
-                                              <Component id="Curso_tablaDocentes" min="-2" pref="485" max="-2" attributes="0"/>
-                                          </Group>
+                                          <Component id="Curso_agregar_asignatura" min="-2" pref="98" max="-2" attributes="0"/>
+                                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                                          <Component id="Curso_agregar_opcionesAsignatura" min="-2" pref="171" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
-                                  <EmptySpace pref="43" max="32767" attributes="0"/>
+                                  <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
+                                  <Component id="jSeparator1" min="-2" pref="19" max="-2" attributes="0"/>
+                                  <EmptySpace pref="351" max="32767" attributes="0"/>
+                                  <Component id="Curso_agregar_botonAgregar" min="-2" pref="151" max="-2" attributes="0"/>
+                                  <EmptySpace max="-2" attributes="0"/>
                               </Group>
                           </Group>
                         </DimensionLayout>
                         <DimensionLayout dim="1">
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Group type="102" alignment="0" attributes="0">
-                                  <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="3" attributes="0">
-                                      <Component id="Curso_agregar_docente" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
-                                      <Component id="Curso_agregar_docente1" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
-                                  </Group>
-                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="0" attributes="0">
+                              <Group type="102" alignment="1" attributes="0">
+                                  <Group type="103" groupAlignment="1" attributes="0">
                                       <Group type="102" attributes="0">
-                                          <Group type="103" groupAlignment="3" attributes="0">
-                                              <Component id="Curso_agregar_clase" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
-                                              <Component id="Curso_agregar_opcionesClase" alignment="3" min="-2" max="-2" attributes="0"/>
-                                          </Group>
-                                          <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
-                                          <Group type="103" groupAlignment="3" attributes="0">
-                                              <Component id="Curso_agregar_grupo" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
-                                              <Component id="Curso_agregar_opcionesGrupo" alignment="3" min="-2" max="-2" attributes="0"/>
-                                          </Group>
-                                          <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
-                                          <Group type="103" groupAlignment="3" attributes="0">
-                                              <Component id="Curso_agregar_asignatura" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
-                                              <Component id="Curso_agregar_opcionesAsignatura" alignment="3" min="-2" max="-2" attributes="0"/>
-                                          </Group>
-                                          <EmptySpace min="24" pref="235" max="32767" attributes="0"/>
-                                      </Group>
-                                      <Group type="102" alignment="0" attributes="0">
-                                          <Component id="Curso_tablaDocentes" min="-2" pref="319" max="-2" attributes="0"/>
                                           <EmptySpace max="32767" attributes="0"/>
                                           <Component id="Curso_agregar_botonAgregar" min="-2" pref="40" max="-2" attributes="0"/>
-                                          <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
+                                      </Group>
+                                      <Group type="102" alignment="0" attributes="0">
+                                          <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
+                                          <Group type="103" groupAlignment="0" attributes="0">
+                                              <Component id="jSeparator1" max="32767" attributes="0"/>
+                                              <Group type="102" attributes="0">
+                                                  <Component id="Curso_agregar_docente" min="-2" pref="40" max="-2" attributes="0"/>
+                                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                                  <Group type="103" groupAlignment="3" attributes="0">
+                                                      <Component id="Curso_agregar_clase" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
+                                                      <Component id="Curso_agregar_opcionesClase" alignment="3" min="-2" max="-2" attributes="0"/>
+                                                  </Group>
+                                                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                                                  <Group type="103" groupAlignment="3" attributes="0">
+                                                      <Component id="Curso_agregar_grupo" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
+                                                      <Component id="Curso_agregar_opcionesGrupo" alignment="3" min="-2" max="-2" attributes="0"/>
+                                                  </Group>
+                                                  <EmptySpace pref="16" max="32767" attributes="0"/>
+                                                  <Group type="103" groupAlignment="3" attributes="0">
+                                                      <Component id="Curso_agregar_asignatura" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
+                                                      <Component id="Curso_agregar_opcionesAsignatura" alignment="3" min="-2" max="-2" attributes="0"/>
+                                                  </Group>
+                                                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                                                  <Component id="Curso_agregar_docente1" min="-2" pref="40" max="-2" attributes="0"/>
+                                                  <EmptySpace max="-2" attributes="0"/>
+                                                  <Component id="Curso_tablaDocentes" min="-2" pref="203" max="-2" attributes="0"/>
+                                              </Group>
+                                          </Group>
                                       </Group>
                                   </Group>
+                                  <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                         </DimensionLayout>
@@ -1535,18 +1537,19 @@
                               <Font name="Dialog" size="18" style="0"/>
                             </Property>
                             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                              <StringArray count="11">
-                                <StringItem index="0" value="Inform&#xe1;tica"/>
-                                <StringItem index="1" value="Idioma Espa&#xf1;ol"/>
-                                <StringItem index="2" value="Matem&#xe1;tica"/>
-                                <StringItem index="3" value="Ingl&#xe9;s"/>
-                                <StringItem index="4" value="Historia"/>
-                                <StringItem index="5" value="Geograf&#xed;a"/>
-                                <StringItem index="6" value="Biolog&#xed;a"/>
-                                <StringItem index="7" value="Ciencias F&#xed;sicas"/>
-                                <StringItem index="8" value="Dibujo"/>
-                                <StringItem index="9" value="M&#xfa;sica"/>
-                                <StringItem index="10" value="Educaci&#xf3;n F&#xed;sica"/>
+                              <StringArray count="12">
+                                <StringItem index="0" value=""/>
+                                <StringItem index="1" value="Inform&#xe1;tica"/>
+                                <StringItem index="2" value="Idioma Espa&#xf1;ol"/>
+                                <StringItem index="3" value="Matem&#xe1;tica"/>
+                                <StringItem index="4" value="Ingl&#xe9;s"/>
+                                <StringItem index="5" value="Historia"/>
+                                <StringItem index="6" value="Geograf&#xed;a"/>
+                                <StringItem index="7" value="Biolog&#xed;a"/>
+                                <StringItem index="8" value="Ciencias F&#xed;sicas"/>
+                                <StringItem index="9" value="Dibujo"/>
+                                <StringItem index="10" value="M&#xfa;sica"/>
+                                <StringItem index="11" value="Educaci&#xf3;n F&#xed;sica"/>
                               </StringArray>
                             </Property>
                             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
@@ -1640,6 +1643,11 @@
                               <Color blue="0" green="0" red="0" type="rgb"/>
                             </Property>
                             <Property name="text" type="java.lang.String" value="Seleccione un docente"/>
+                          </Properties>
+                        </Component>
+                        <Component class="javax.swing.JSeparator" name="jSeparator1">
+                          <Properties>
+                            <Property name="orientation" type="int" value="1"/>
                           </Properties>
                         </Component>
                       </SubComponents>
@@ -1788,7 +1796,7 @@
                                           </Group>
                                       </Group>
                                   </Group>
-                                  <EmptySpace pref="27" max="32767" attributes="0"/>
+                                  <EmptySpace max="32767" attributes="0"/>
                               </Group>
                           </Group>
                         </DimensionLayout>
